# external-projects-and-tasks

./: README.md
CVProject/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
CVProject/CVProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
CVProject/audit/: middleware.py  models.py  urls.py  views.py
CVProject/audit/migrations/: 0001_initial.py
CVProject/cv_api/: urls.py
CVProject/cv_api/v1/: serializers.py  urls.py  views.py
CVProject/cv_app/: context_processors.py  models.py  urls.py
CVProject/cv_app/fixtures/: cv.json
CVProject/cv_app/migrations/: 0001_initial.py
CVProject/cv_app/services/emails/: service.py
CVProject/cv_app/services/pdf/: __init__.py  interfaces.py  reportlab_renderer.py  service.py
CVProject/cv_app/services/translation/: prompt_service.py  service.py  supported_languages.py  translator.py
CVProject/cv_app/tasks/: send_email.py
CVProject/cv_app/views/: __init__.py  cv_detail.py  cv_list.py  cv_pdf.py  send_cv_email.py  settings.py  translave_cv_view.py
CVProject/templates/audit/: logs.html
CVProject/templates/cv_app/: base.html  cv_detail.html  cv_list.html  cv_pdf.html  settings.html
CVProject/templates/cv_app/partials/: cv_actions.html  cv_translations.html
CVProject/tests/: conftest.py
CVProject/tests/api/: test_v1_cv_create.py  test_v1_cv_delete.py  test_v1_cv_list.py  test_v1_cv_patch.py  test_v1_cv_retrieve.py  test_v1_cv_update.py
CVProject/tests/app/audit/: test_logs_view.py  test_middleware.py
CVProject/tests/fixtures/: core.py  urls.py
test_ml/: main.py  (+5 more)
(+203 files in other folders)
